# -Building-and-connecting-libraries-5

./: CMakeLists.txt
include/: EquilateralTriangle.h  IsoscelesTriangle.h  Parallelogram.h  Quadrangle.h  Rectangle.h  Rhombus.h  RightTriangle.h  Shape.h  Square.h  Triangle.h
